# fossil-cli

./: pyproject.toml  tox.ini
fossil_cli/: Branch.py  Commit.py  Info.py  New.py  Version.py  __init__.py  utils.py
tests/: conftest.py  test_new.py
